<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">imgur Holo</string>
    <string name="action_settings">Settings</string>
    <string name="action_upload">Upload</string>
    <string name="action_share">Share</string>
    <string name="action_download">Download</string>
    <string name="action_reply">Reply</string>
    <string name="action_report">Report</string>
    <string name="action_search">Search</string>
    <string name="action_message">New Message</string>
    <string name="action_comments">Go to Comments</string>
    <string name="action_new">New</string>
    <string name="drawer_open">Opening Drawer</string>
    <string name="drawer_close">Closing Drawer</string>
    <string name="app_not_available">App Not Available</string>
    <string name="menu_account">Account</string>
    <string name="menu_login">Login</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_images">Images</string>
    <string name="menu_albums">Albums</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_comments">Comments</string>
    <string name="menu_likes">Likes</string>
    <string name="menu_disk_used">Disk Used</string>
    <string name="menu_bio">Biography</string>
    <string name="menu_account_creation">Creation Date</string>
    <string name="menu_email">Your Email</string>
    <string name="album_privacy">Change Album Privacy</string>
    <string name="public_images">Change Image Privacy</string>
    <string name="messaging_enabled">Enable/Disable Messaging</string>
    <string name="menu_bandwidth_used">Bandwidth Used</string>
    <string name="menu_account_settings">Settings</string>
    <string name="image_type">Image Type</string>
    <string name="size">Size</string>
    <string name="views">Views</string>
    <string name="subreddit">SubReddit</string>
    <string name="action_copy">Copy URLs</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_sort">Sort</string>
    <string name="action_refresh">Refresh</string>
    <string name="fifty">50</string>
    <string name="one_hundred">100</string>
    <string name="two_hundred">200</string>
    <string name="ninety">90</string>
    <string name="onetwenty">120</string>
    <string name="oneeighty">180</string>
    <string name="threesixty">360</string>
    <string name="private_string">Private</string>
    <string name="hidden_string">Hidden</string>
    <string name="secret_string">Secret</string>
    <string name="public_string">Public</string>
    <string name="hidden_string_submit">hidden</string>
    <string name="secret_string_submit">secret</string>
    <string name="public_string_submit">public</string>
    <string name="enable_messaging">Enable Messaging</string>
    <string name="disable_messaging">Disable Messaging</string>
    <string name="link">Link</string>
    <string name="reputation">Reputation</string>
    <string name="direct_link">Direct Link</string>
    <string name="html_link">HTML Image</string>
    <string name="bbcode_link">BBCode (Forums)</string>
    <string name="linked_bbcode_link">Linked BBCode</string>
    <string name="markdown_link">Markdown Link (Reddit)</string>
    <string name="title_activity_image_select">ImageSelectActivity</string>
    <string name="action_submit">Submit/Remove from Gallery</string>

    <string name="upload_url">Upload From Web</string>
    <string name="upload_gallery">Upload From Phone</string>
    <string name="upload_camera">Take a Picture With the Camera</string>
    <string name="upload_explanation">Why Can\'t I Upload Multiple Pictures?</string>

    <string name="light_theme">Holo Light</string>
    <string name="dark_theme">Holo Dark</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="topComment">Top</string>
    <string name="bestComment">Best</string>
    <string name="newComment">New</string>

    <string name="best">Best</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>

    <string name="bestSetting">l</string>
    <string name="highSetting">m</string>
    <string name="mediumSetting">t</string>
    <string name="lowSetting">s</string>

    <string name="rating_good">Upvote</string>
    <string name="rating_bad">Downvote</string>
    <string name="account">Account</string>
    <string name="reply">Reply</string>
    <string name="report">Report</string>

    <string name="popularity">Popularity</string>
    <string name="newest">Newest</string>

    <string name="viralsort">viral</string>
    <string name="topsort">top</string>
    <string name="newsort">time</string>

    <string name="viral">most viral</string>
    <string name="user">user submitted</string>
    <string name="top">highest scoring</string>
    <string name="memes">memes</string>
    <string name="random">random</string>

    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="all">All</string>

    <string name="card_view">Card View</string>
    <string name="grid_view">Grid View</string>
    <string name="username">Username</string>
    <string name="error_messages">Error getting messages</string>
    <string name="imgur_down">imgur not responding</string>
    <string name="dash">-</string>
    <string name="error_loading_images">Error Loading Images</string>
    <string name="error_getting_images">Error getting images</string>
    <string name="icon_size">IconSize</string>
    <string name="picture_download">Picture Download</string>
    <string name="download_in_progress">Download in progress</string>
    <string name="download_complete">Download Complete</string>
    <string name="download_finished">Image download finished</string>
    <string name="share">Share</string>
    <string name="error_upload">Error Uploading to imgur</string>
    <string name="imgur_uploader_title">imgur Image Uploader</string>
    <string name="finished_uploading">Finished Uploading</string>
    <string name="image_deleted">Image Deleted</string>

    <string name="activity_title_images">Images</string>
    <string name="activity_title_image">Image</string>
    <string name="activity_title_my_messages">My Messages</string>
    <string name="activity_title_my_comments">My Comments</string>
    <string name="activity_title_comments_user">%1$s\'s comments</string>
    <string name="activity_title_my_album">My Albums</string>
    <string name="activity_title_album_user">%1$s\'s albums</string>

    <string name="dialog_quit_title">Quit?</string>
    <string name="dialog_quit_summary">Are you sure you want to quit?</string>
    <string name="dialog_answer_yes">Yes</string>
    <string name="dialog_answer_no">No</string>
    <string name="dialog_answer_cancel">Cancel</string>
    <string name="dialog_report_user_title">Report and Block User</string>
    <string name="dialog_report_user_summary">Are you sure you want to report this user and block them?</string>
    <string name="dialog_send_message_title">Send Message</string>
    <string name="dialog_delete_message_summary">Are you sure you want to delete this conversation?</string>
    <string name="dialog_url_title">Enter URL</string>
    <string name="dialog_explanation_title">Image Explanation</string>
    <string name="dialog_delete_confirmation_title">Delete Image?</string>
    <string name="dialog_reply_title">Reply to Comment</string>
    <string name="dialog_new_album_title">New Album</string>
    <string name="dialog_comment_on_image_title">Comment on Image</string>
    <string name="dialog_delete_confirmation_summary">Are you sure you want to delete this image? This cannot be undone</string>
    <string name="dialog_edit_title">Edit Image Details</string>
    <string name="dialog_explanation_summary">You can! You just have to do it from the gallery or other app by multiselecting. :( The ELI5 explanation is that basically the Android API is a bit weird in this area. More explicitly, I cannot determine a way to request multiple files via intent, if you know a work around feel free to contact me on Google Play.</string>
    <string name="dialog_upload_options_title">Upload Options</string>
    <string name="dialog_reddit_choose_title">Choose SubReddit</string>

    <string name="toast_explanation_comment_posted">Comment Posted!</string>
    <string name="toast_explanation_comment_removed">Removed!</string>
    <string name="toast_explanation_comment_submitted">Submitted!</string>

    <string name="body_hint_description">Description</string>
    <string name="body_hint_title">Title</string>
    <string name="body_hint_body">Body</string>
    <string name="body_hint_subject">Subject</string>
    <string name="body_hint_recipient">Recipient</string>
    <string name="hint_album_title">Album Title</string>

    <string name="choice_mode_items">Select Items</string>
    <string name="choice_mode_one_item">One item selected</string>

    <string name="notification_finished_album">Finished Uploading Album</string>

    <string name="toast_uploading">Uploading Image…</string>
    <string name="toast_copied">Copied!</string>
    <string name="toast_downloading">Downloading %d images! This may take a while…</string>
    <string name="download_progress">Downloaded %d images!</string>
</resources>
