<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/dark_action_search"
          android:showAsAction="ifRoom|collapseActionView"
          android:orderInCategory="25"
          android:actionViewClass="android.widget.SearchView"
          android:visible="false"/>
    <item android:id="@+id/action_refresh"
          android:title="@string/action_refresh"
          android:orderInCategory="50"
          android:icon="@drawable/dark_navigation_refresh"
          android:showAsAction="ifRoom|collapseActionView"
          android:visible="false"/>
    <item android:id="@+id/action_reply"
        android:title="@string/action_reply"
        android:orderInCategory="10"
        android:icon="@drawable/dark_social_reply"
        android:showAsAction="ifRoom|collapseActionView"
        android:visible="false"/>
    <item android:id="@+id/action_report"
        android:title="@string/action_report"
        android:orderInCategory="100"
        android:icon="@drawable/dark_alerts_and_states_warning"
        android:showAsAction="ifRoom|collapseActionView"
        android:visible="false"/>
    <item android:id="@+id/action_comments"
          android:title="@string/action_comments"
          android:orderInCategory="0"
          android:icon="@drawable/dark_social_cc_bcc"
          android:showAsAction="ifRoom|collapseActionView"
          android:visible="false" />
    <item android:id="@+id/action_message"
          android:title="@string/action_message"
          android:orderInCategory="0"
          android:icon="@drawable/dark_content_new_email"
          android:showAsAction="ifRoom|collapseActionView"
          android:visible="false" />
    <item android:id="@+id/action_edit"
          android:title="@string/action_edit"
          android:orderInCategory="50"
          android:icon="@drawable/dark_content_edit"
          android:showAsAction="ifRoom|collapseActionView"
          android:visible="false" />
    <item android:id="@+id/action_new"
          android:title="@string/action_new"
          android:orderInCategory="50"
          android:icon="@drawable/dark_content_new"
          android:showAsAction="ifRoom|collapseActionView"
          android:visible="false" />
    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          android:orderInCategory="75"
          android:icon="@drawable/dark_social_share"
          android:showAsAction="ifRoom|collapseActionView"
          android:visible="false" />
    <item android:id="@+id/action_copy"
          android:title="@string/action_copy"
          android:orderInCategory="5"
          android:icon="@drawable/dark_content_copy"
          android:showAsAction="ifRoom|collapseActionView"
          android:visible="false" />
    <item android:id="@+id/action_delete"
          android:title="@string/action_delete"
          android:orderInCategory="75"
          android:icon="@drawable/dark_content_discard"
          android:showAsAction="ifRoom|collapseActionView"
          android:visible="false" />
    <item android:id="@+id/action_download"
          android:title="@string/action_download"
          android:icon="@drawable/dark_av_download"
          android:orderInCategory="75"
          android:showAsAction="ifRoom|collapseActionView"
          android:visible="false" />
    <item android:id="@+id/action_sort"
          android:title="@string/action_sort"
          android:orderInCategory="10"
          android:icon="@drawable/dark_collections_sort_by_size"
          android:showAsAction="ifRoom|collapseActionView"
          android:visible="false" >
        <menu
                android:id="@+id/menu_sort">
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/menuSortPopularity"
                        android:title="@string/popularity" />
                <item
                        android:id="@+id/menuSortBest"
                        android:title="@string/bestComment" />
                <item
                        android:id="@+id/menuSortTop"
                        android:title="@string/topComment" />
                <item
                        android:id="@+id/menuSortNewest"
                        android:title="@string/newComment" />

                <item
                        android:id="@+id/menuSortDay"
                        android:title="@string/day"
                        android:visible="false"/>
                <item
                        android:id="@+id/menuSortWeek"
                        android:title="@string/week"
                        android:visible="false"/>
                <item
                        android:id="@+id/menuSortMonth"
                        android:title="@string/month"
                        android:visible="false"/>
                <item
                        android:id="@+id/menuSortYear"
                        android:title="@string/year"
                        android:visible="false"/>
                <item
                        android:id="@+id/menuSortAll"
                        android:title="@string/all"
                        android:visible="false"/>
            </group>
        </menu>
    </item>
    <item android:id="@+id/subreddit"
          android:title="@string/subreddit"
          android:orderInCategory="15"
          android:icon="@drawable/dark_subredditlogo"
          android:showAsAction="ifRoom|collapseActionView"
          android:visible="false" />
    <item android:id="@+id/action_upload"
          android:title="@string/action_upload"
          android:orderInCategory="75"
          android:icon="@drawable/dark_av_upload"
          android:showAsAction="ifRoom|collapseActionView"
          android:visible="false"/>
    <item android:id="@+id/action_submit"
          android:title="@string/action_submit"
          android:orderInCategory="75"
          android:icon="@drawable/dark_social_add_group"
          android:showAsAction="ifRoom|collapseActionView"
          android:visible="false"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/dark_action_settings"
        android:showAsAction="never"
        android:visible="false"/>
</menu>
