<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_message"
          android:title="@string/action_message"
          android:orderInCategory="100"
          android:icon="@drawable/content_new_email"
          android:showAsAction="always"
          android:visible="false" />
    <item android:id="@+id/action_new"
          android:title="@string/action_new"
          android:orderInCategory="100"
          android:icon="@drawable/content_new"
          android:showAsAction="always"
          android:visible="false" />
    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          android:orderInCategory="100"
          android:icon="@drawable/social_share"
          android:showAsAction="always"
          android:visible="false" />
    <item android:id="@+id/action_copy"
          android:title="@string/action_copy"
          android:orderInCategory="100"
          android:icon="@drawable/content_copy"
          android:showAsAction="always"
          android:visible="false" />
    <item android:id="@+id/action_download"
          android:title="@string/action_download"
          android:orderInCategory="100"
          android:icon="@drawable/av_download"
          android:showAsAction="always"
          android:visible="false" />
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:orderInCategory="100"
          android:icon="@drawable/action_search"
          android:showAsAction="always"
          android:visible="false" />
    <item android:id="@+id/action_upload"
        android:title="@string/action_upload"
        android:orderInCategory="100"
        android:icon="@drawable/av_upload"
        android:showAsAction="always" />

</menu>
