<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/rating_good"
        android:title="@string/rating_good"
        android:orderInCategory="100"
        android:icon="@drawable/rating_good"
        android:showAsAction="always" />
    <item android:id="@+id/rating_bad"
        android:title="@string/rating_bad"
        android:orderInCategory="100"
        android:icon="@drawable/rating_bad"
        android:showAsAction="always" />
    <item android:id="@+id/user"
        android:title="@string/account"
        android:orderInCategory="100"
        android:icon="@drawable/social_person"
        android:showAsAction="always" />
    <item android:id="@+id/reply"
        android:title="@string/reply"
        android:orderInCategory="100"
        android:icon="@drawable/social_reply"
        android:showAsAction="always" />
    <item android:id="@+id/report"
        android:title="@string/report"
        android:orderInCategory="100"
        android:icon="@drawable/alerts_and_states_warning"
        android:showAsAction="always" />
</menu>